# mycelium

./: .gitignore  Makefile  README.md  mycelium.toml  nats-server.conf  pyproject.toml
.superpowers/brainstorm/34327-1774472320/: .server-info  tab-views.html  visual-style.html
docs/: design.md
src/mycelium/: __init__.py  cli.py
src/mycelium/brainstem/: decay.py  embeddings.py  graph.py  store.py
src/mycelium/bus/: bus.py  events.py  publisher.py  subscriber.py
src/mycelium/connectors/: base.py  git.py  registry.py  vault.py
src/mycelium/migrations/: 001_initial.py  002_webui.py  (+1 more)
tests/integration/: test_cortex_e2e.py
tests/unit/: test_agent_manager.py  test_batch_dedup.py  test_bus_unit.py  test_catchall_agent.py  test_challenger.py  test_change_detection.py  test_cli.py  test_cluster.py  test_concept_builder.py  test_confidence_wiring.py  test_config.py  test_connector_registry.py  test_consistency.py  test_cortex_reasoner.py  test_cortex_router.py  test_cross_doc_enrichment.py  test_decay.py  test_embeddings.py  test_entity_resolver.py  test_event_emitter.py  test_events.py  test_extractor.py  test_feedback.py  test_feedback_api.py  test_feedback_integration.py  test_force_learn.py  test_gap_detector.py  test_git_connector.py  test_graph.py  test_hierarchy_builder.py  test_intent.py  test_llm.py  test_meta_agent.py  test_models.py  test_observe_api.py  test_observe_store.py  test_observer.py  test_perception_engine.py  test_priority.py  test_process_guard.py  (+17 more)
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx
(+73 files in other folders)
