[project]
name = "mycelium"
version = "0.1.0"
description = "Self-enriching knowledge engine"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "nats-py>=2.7",
    "networkx>=3.2",
    "faiss-cpu>=1.7",
    "spacy>=3.7",
    "sentence-transformers>=2.3",
    "textual>=0.47",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "pydantic>=2.5",
    "python-louvain>=0.16",
    "gitpython>=3.1",
    "rich>=13.7",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2",
]

[project.scripts]
mycelium = "mycelium.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mycelium"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
